AWS_Project/PART1_Scripts/CloudFormation/CF_Project_Part1.json
{
"AWSTemplateFormatVersion": "2010-09-09",
    "Description": "To create VPC and subnets", 
    "Parameters": {
     "VpcCIDR" :{
        "Type": "String",
        "Default": "10.0.0.0/16"
     },
     "PublicSubnet1CIDR":{
        "Type": "String",
        "Default": "10.0.1.0/24"         
     },
     "PublicSubnet2CIDR":{
      "Type": "String",
      "Default": "10.0.2.0/24"         
   },
     "PrivateSubnetCIDR":{
        "Type": "String",
        "Default": "10.0.3.0/24"         
     }
    },
    "Resources": {
        
        "MyVPC": {
          "Type": "AWS::EC2::VPC",
          "Properties": {
            "CidrBlock": 
            { "Ref": "VpcCIDR" },
            "Tags": [{"Key":"Name","Value":"Project_VPC"}]
          }
          
        },
        "NatGateway1EIP": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": "InternetGatewayAttachment1",
            "Properties": {
            "Domain": "MyVPC"
          }
        },

        "NATGateway1": {
            "Type": "AWS::EC2::NatGateway",
            "Properties":{
              "AllocationId": {"Fn::GetAtt": ["NatGateway1EIP", "AllocationId"] },
              "SubnetId": { "Ref": "PublicSubnet1" },             
              "Tags":[{"Key":"Name","Value":"Project_NATGatway1"}]
            }
        },
        
        
        "PublicSubnet1": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": "us-east-1a",
            "VpcId": {"Ref": "MyVPC"},
            "CidrBlock":{"Ref":"PublicSubnet1CIDR"},
            "MapPublicIpOnLaunch": "true",
            "Tags": [{"Key":"Name","Value":"Project_PublicSubnet1"}]           
          }
        },
        
        "InternetGateway1": {
          "Type": "AWS::EC2::InternetGateway",
          "Properties": {
            "Tags": [{"Key":"Name","Value":"Project_IGW1"}]
          }
        },
        "InternetGatewayAttachment1": {
          "Type": "AWS::EC2::VPCGatewayAttachment",
          "Properties": {
            "VpcId": { "Ref": "MyVPC" },
            "InternetGatewayId": { "Ref": "InternetGateway1" }
          }
        },
        
        "PublicRouteTable1": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "MyVPC" },
            "Tags": [{"Key":"Name","Value":"Public_RT1"}]
          }
        },
        
        "PublicRoute1": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": { "Ref": "PublicRouteTable1" },            
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": { "Ref": "InternetGateway1" }
            }
        },

        "PublicRouteAssociation1": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": { "Ref": "PublicSubnet1" },
            "RouteTableId": { "Ref": "PublicRouteTable1" }            
          }
        },
        "PublicSubnet2": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": "us-east-1b",
            "VpcId": {"Ref": "MyVPC"},
            "CidrBlock":{"Ref":"PublicSubnet2CIDR"},
            "MapPublicIpOnLaunch": "true",
            "Tags": [{"Key":"Name","Value":"Project_PublicSubnet2"}]           
          }
        },
      
        
        "PublicRouteTable2": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "MyVPC" },
            "Tags": [{"Key":"Name","Value":"Public_RT2"}]
          }
        },
        
        "PublicRoute2": {
          "Type": "AWS::EC2::Route",
          "Properties": {
            "RouteTableId": { "Ref": "PublicRouteTable2" },            
            "DestinationCidrBlock": "0.0.0.0/0",
            "GatewayId": { "Ref": "InternetGateway1" }
            }
        },

        "PublicRouteAssociation2": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": { "Ref": "PublicSubnet2" },
            "RouteTableId": { "Ref": "PublicRouteTable2" }            
          }
        },

        "PrivateSubnet1": {
          "Type": "AWS::EC2::Subnet",
          "Properties": {
            "AvailabilityZone": "us-east-1b",
            "VpcId": { "Ref": "MyVPC" },
            "CidrBlock": { "Ref": "PrivateSubnetCIDR" },
            "Tags": [{"Key":"Name","Value":"Project_PrivateSubnet"}] 
          }
        },
        
        "PrivateRouteTable": {
          "Type": "AWS::EC2::RouteTable",
          "Properties": {
            "VpcId": { "Ref": "MyVPC" },
            "Tags": [{"Key":"Name","Value":"Private_RT"}]
          }
        },
        "DefaultPrivateRoute1":{
            "Type": "AWS::EC2::Route",
            "Properties": {
              "RouteTableId": { "Ref": "PrivateRouteTable" },              
              "DestinationCidrBlock": "0.0.0.0/0",
              "NatGatewayId": { "Ref": "NATGateway1" }
            }
        
        },              

        "PrivateRouteAssociation": {
          "Type": "AWS::EC2::SubnetRouteTableAssociation",
          "Properties": {
            "SubnetId": { "Ref": "PrivateSubnet1" },            
            "RouteTableId": { "Ref": "PrivateRouteTable" }  
          }
        },
        
        "IngressSecurityGroup" : {
          "Type" : "AWS::EC2::SecurityGroup",
          "Properties" : {
            "GroupDescription": "Security Group with NoIngress Rules",
            "VpcId" : { "Ref": "MyVPC" },
            "Tags": [{"Key":"Name","Value":"NoRulesIngress_SG"}] 
          }
   
        }
    },
    "Outputs": {

        "VpcID" : {  
            "Value" : { "Ref": "MyVPC" }, 
            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-VpcID" }}
        },
        "PublicSubnetID1":{  
            "Value" : { "Ref": "PublicSubnet1" },
            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnetID1"}}
        },
        "PublicSubnetID2":{  
          "Value" : { "Ref": "PublicSubnet2" },
          "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PublicSubnetID2"}}
      },
        "PrivateSubnetID":{  
            "Value" : { "Ref": "PrivateSubnet1" },
            "Export" : { "Name" : {"Fn::Sub": "${AWS::StackName}-PrivateSubnetID"}}
        }
  

    }
}
